--- a/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-05-28 15:54:03+0000 */
+/* Translation-Revision-Date: 2019-06-11 10:54:03+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_CN */
@@ -40,6 +40,9 @@
 
 /* Accessibility label for the 'Add a note' button */
 "Add a note button" = "“添加备注”按钮";
+
+/* Accessibility label for the 'Add a tracking' button */
+"Add a tracking button" = "添加跟踪按钮";
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "为订单添加备注";
@@ -110,6 +113,9 @@
 
 /* Application's Background State */
 "Background" = "背景";
+
+/* A descriptive label prefix. Example: 'Backorders: not allowed' */
+"Backorders:" = "预订：";
 
 /* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "%2$@ 栏号 %1$i";
@@ -188,7 +194,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "无法连接。服务器上没有所需的 XML-RPC 方法。";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "无法连接。尝试访问您的站点 XMLRPC 终端时收到了 403 错误。与您的站点进行通信所需要的应用程序。请联系您的托管服务提供商以解决此问题。";
+"Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "无法连接。您的主机会阻止 POST 请求，而应用程序需要通过该请求与您的站点通信。请联系您的托管服务提供商以解决此问题。";
@@ -291,9 +297,6 @@
 /* Message to show to user when he tries to add a self-hosted site that is an empty URL. */
 "Empty URL" = "空 URL";
 
-/* Error message shown when a URL is invalid. */
-"Enter a valid URL eg. example.com." = "请输入有效的 URL，例如 example.com。";
-
 /* Add custom shipping provider. Placeholder of cell presenting provider name */
 "Enter provider name" = "输入提供商名称";
 
@@ -374,8 +377,14 @@
 /* Footer text to hide the billing cell */
 "Hide billing" = "隐藏账单";
 
+/* Error message shown a URL does not point to an existing site. */
+"Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "此 URL 可能并未指向 WordPress 站点。请仔细检查拼写，然后重试。";
+
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "如果禁用，备注将不会公开";
+
+/* Display label for the product's inventory stock status */
+"In stock" = "有货";
 
 /* Application's Inactive State */
 "Inactive" = "未激活";
@@ -406,6 +415,10 @@
 
 /* No comment provided by engineer. */
 "Invalid username" = "无效用户名";
+
+/* Product Details - inventory section title
+   Product Details > Pricing & Inventory > Inventory cell title - Product Details > Pricing and Inventory section > descriptive label for the Inventory cell. */
+"Inventory" = "库存";
 
 /* An error message shown during log in when the username or password is incorrect. */
 "It looks like this username\/password isn't associated with this site." = "此用户名\/密码可能与该站点无关。";
@@ -593,6 +606,9 @@
 /* Spoken label to indicate switch control is turned on */
 "On" = "打开";
 
+/* Display label for the product's inventory stock status */
+"On back order" = "延迟交货";
+
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "打开设备设置";
 
@@ -636,6 +652,9 @@
 
 /* My Store > Settings > Other app section */
 "Other" = "其他";
+
+/* Display label for the product's inventory stock status */
+"Out of stock" = "缺货";
 
 /* Product section title */
 "PRODUCT" = "产品";
@@ -689,6 +708,12 @@
 /* Message to ask the user to check their email and look for a WordPress.com email. */
 "Please open your email app and look for an email from WordPress.com." = "请打开电子邮件应用程序，查找来自 WordPress.com 的电子邮件。";
 
+/* Product Details > Pricing and Inventory section > descriptive label for the Price cell. */
+"Price" = "价格";
+
+/* Product Details - pricing and inventory section title */
+"Pricing and Inventory" = "定价和库存";
+
 /* Opens the Privacy Policy web page */
 "Privacy Policy" = "隐私政策";
 
@@ -738,6 +763,9 @@
 /* Describes a domain that was registered with WordPress.com */
 "Registered Domain" = "已注册的域";
 
+/* A descriptive label prefix. Example: 'Regular price: $20.00' */
+"Regular price:" = "正常价格：";
+
 /* Action: Opens the Store in a browser
    Action: removes the current filters from the notifications list */
 "Remove Filters" = "删除过滤器";
@@ -768,11 +796,18 @@
    Reviews descriptive label */
 "Reviews" = "评论";
 
-/* SKU label */
+/* A descriptive title for the SKU cell in Product Details > Inventory, for Grouped products. */
+"SKU" = "SKU";
+
+/* A descriptive label for the SKU prefix. Example: 'SKU: woo-affiliate-beanie'
+   A descriptive label prefix. Example: 'SKU: woo-virtual-beanie' - SKU label */
 "SKU:" = "SKU：";
 
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "短信已发送";
+
+/* A descriptive label prefix. Example: 'Sale price: $18.00' */
+"Sale price:" = "促销价格：";
 
 /* Orders Search Placeholder */
 "Search all orders" = "搜索所有订单";
@@ -896,6 +931,12 @@
 /* VoiceOver accessibility value, informs the user about the X-axis min/max values. It reads: Starting date {date}, ending date {date}. */
 "Starting period %1$@, ending period %2$@" = "起始日期：%1$@；结束日期：%2$@";
 
+/* A descriptive label prefix. Example: 'Stock quantity: 19' */
+"Stock quantity:" = "库存数量：";
+
+/* A descriptive label prefix. Example: 'Stock status: In stock' */
+"Stock status:" = "库存状态：";
+
 /* VoiceOver accessibility label for the store revenue chart. */
 "Store revenue chart" = "商店收益图表";
 
@@ -973,9 +1014,6 @@
 
 /* No comment provided by engineer. */
 "The site address must be shorter than 64 characters." = "站点地址必须短于64个字符。";
-
-/* Error message shown a URL does not point to an existing site. */
-"The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress." = "此地址下的站点不是 WordPress 站点。站点必须使用 WordPress，我们才能建立连接。";
 
 /* Message shown when site deletion API failed */
 "The site could not be deleted." = "无法删除该站点。";
@@ -1140,9 +1178,6 @@
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "更新订单状态";
 
-/* Order updated summary date. It reads: Updated {medium formatted date} at {short style time} */
-"Updated %1$@ at %2$@" = "更新时间：%1$@ %2$@";
-
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "已于 %ld 小时之前更新";
 
@@ -1273,14 +1308,20 @@
 /* Body text of alert helping users understand their site address */
 "Your site address appears in the bar at the the top of the screen when you visit your site in Safari." = "在您使用 Safari 访问自己的站点时，站点地址显示在屏幕顶部的地址栏中。";
 
+/* Backorders status. Example: 'Backorders: allowed' */
+"allowed" = "允许";
+
 /* Notification status description for 'approved' */
 "approved" = "已批准";
 
 /* Site Address placeholder */
-"example.com" = "example.com";
+"example.wordpress.com" = "example.wordress.com";
 
 /* Later today */
 "later today" = "稍后再说";
+
+/* Backorders status. Example: 'Backorders: not allowed' */
+"not allowed" = "不允许";
 
 /* Notification status description for 'unspam' (opposite of spam) */
 "not spam" = "非垃圾邮件";
